# buddysaradhi

./: .gitignore  .gitleaks.toml  .vercelignore  00_Vision.md  01_Product_Principles.md  02_Core_Logic.md  03_User_Flows.md  04_Dashboard.md  05_Students.md  06_Attendance.md  07_Fees_and_Payments.md  08_Settings.md  09_Backup_and_Import_Export.md  10_Security.md  11_Data_Model.md  12_Business_Rules.md  13_UI_Guidelines.md  14_Edge_Cases.md  15_Future_Roadmap.md  16_Platform_Delivery_Sequence.md  17_API_Gateway_System.md  18_Microservice_Architecture.md  19_Concurrency_and_Testing.md  20_3D_Product_Page.md  21_Automation_Testing.md  21_Redis_Caching_Layer.md  22_Redundancy_Audit.md  22_Vector_Search_System.md  23_Complexity_Guarantees.md  23_Security_Harness_Plan.md  AGENTS.md  ORIGINAL_REQUEST.md  PROJECT.md  SUMMARY.md  claude-flow.config.json  detect.py  dev.err  diagnose.js  extract_schema.py  generate_zod.py  (+15 more)
.claude-flow/: CAPABILITIES.md  config.yaml  daemon-state.json  (+1 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: main.json
apps/desktop/src-tauri/migrations/: V0001__init.sql  V0002__ledger_triggers.sql
apps/desktop/src-tauri/src/: error.rs  lib.rs  state.rs
apps/desktop/src-tauri/src/commands/: attendance.rs  auth.rs  backup.rs  dashboard.rs  ledger.rs  mod.rs  settings.rs  students.rs
apps/desktop/src-tauri/src/crypto/: envelope.rs
apps/desktop/src-tauri/src/db/: connection.rs
apps/desktop/src-tauri/src/security/: audit.rs  lockout.rs  mod.rs  pin.rs
apps/desktop/src-tauri/src/sync/: mod.rs  outbox.rs
(+493 files in other folders)
