[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.82"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3" }
tauri-plugin-log = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
rusqlite = { version = "0.31", features = ["bundled-sqlcipher"] }
libsql = "0.3"
argon2 = "0.5"
aes-gcm = "0.10"
zeroize = { version = "1.7", features = ["zeroize_derive"] }
keyring = "2"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
refinery = { version = "0.8", features = ["rusqlite"] }
uuid = { version = "1.8", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.18", features = ["derive"] }
parking_lot = "0.12.5"
base64 = "0.22.1"
rand = "0.9.4"
flate2 = "1.1.9"
tar = "0.4.46"
sha2 = "0.10.9"
